# voiceCloningAPP

./: .env.example  .gitignore  Makefile  README.md  TODO.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  README.md  pyproject.toml  test_audio_service.py
backend/app/: main.py
backend/app/api/: __init__.py  rutas_clonador.py
backend/app/api/v1/: __init__.py  voice_clone.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: voice.py
backend/app/services/: __init__.py  audio.py  tts.py
backend/app/servicios/: audio.py  tts.py
backend/tests/: test_health.py  test_voice_clone.py
docs/: ARCHITECTURE.md  SETUP.md
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: app.tsx  providers.tsx
frontend/src/components/ui/: alert.tsx  button.tsx  card.tsx  index.ts  input.tsx  label.tsx  spinner.tsx  textarea.tsx
frontend/src/config/: env.ts
frontend/src/features/voice-cloner/api/: generate-voice.ts
frontend/src/features/voice-cloner/components/: generated-preview.tsx  voice-clone-form.tsx  voice-cloner-page.tsx
frontend/src/features/voice-cloner/hooks/: use-voice-clone.ts
frontend/src/features/voice-cloner/types/: api.ts  schema.ts
frontend/src/lib/http/: client.ts
frontend/src/styles/: global.css
infrastructure/: docker-compose.yml
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile
scripts/: bootstrap.ps1  bootstrap.sh
