[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "voice-cloning-backend"
version = "0.1.0"
description = "FastAPI backend for the voice cloning application"
readme = "README.md"
authors = [{ name = "VoiceCloningApp" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.112",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.10",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.9",
  "TTS>=0.22.0",
  "transformers>=4.37,<4.50",
  "ffmpeg-python>=0.2.0",
  "librosa>=0.10",
  "soundfile>=0.12",
  "webrtcvad>=2.0.10",
  "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.9",
  "mypy>=1.12",
  "types-orjson>=3.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "tests/__pycache__", "app/__pycache__"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "ASYNC",
]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

